--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
   },
   "dependencies": {
     "@3rdweb/hooks": "^1.9.2",
+    "@3rdweb/sdk": "^1.41.2",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.4.2",
+    "@react-spring/parallax": "^9.4.3",
+    "@sanity/client": "^3.1.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1"
+    "react-hot-toast": "^2.2.0",
+    "react-icons": "^4.3.1",
+    "react-spring": "^9.4.3"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
